@@ -132,7 +132,7 @@ void pkg_grouppolicy_info::setup_package_info(const pkgCache::PkgIterator &pkg,
 				    "%B%s%b%s%n"
 				    "%B%s%b%s%n",
 				    _("Priority: "),pkgCache::VerIterator(ver).PriorityType()?pkgCache::VerIterator(ver).PriorityType():_("Unknown"),
-				    _("Section: "),pkg.Section()?pkg.Section():_("Unknown"),
+				    _("Section: "),ver.Section()?ver.Section():_("Unknown"),
 				    _("Maintainer: "),rec.Maintainer().c_str(),
 				    _("Architecture: "),pkgCache::VerIterator(ver).Arch(),
 				    _("Compressed Size: "), SizeToStr(ver->Size).c_str(),
